syntax = "proto3";

package auth;

service AuthService {
  // Core Auth
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
  
  // Password Management
  rpc ForgotPassword (ForgotPasswordRequest) returns (ForgotPasswordResponse);
  rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordResponse);
  
  // Internal Administration
  rpc CreateUserCredential (CreateUserCredentialRequest) returns (CreateUserCredentialResponse);
}

message User {
  string id = 1;
  string email = 2;
  string role = 3;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string role = 3;
}

message RegisterResponse {
  string access_token = 1;
  string refresh_token = 2;
  User user = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  User user = 3;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string role = 3;
}

message ForgotPasswordRequest {
  string email = 1;
}

message ForgotPasswordResponse {
  bool success = 1;
  string message = 2;
}

message ResetPasswordRequest {
  string token = 1;
  string new_password = 2;
}

message ResetPasswordResponse {
  bool success = 1;
  string message = 2;
}

message CreateUserCredentialRequest {
  string email = 1;
  string role = 2;
  bool temp_password = 3;
}

message CreateUserCredentialResponse {
  string user_id = 1;
  string temp_password = 2; // Only if requested
}
